--- a/recipe/angular.json
+++ b/recipe/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "https://kellenkjames.github.io/recipe-page/",
             "outputPath": "dist/recipe",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -81,7 +82,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/assets"
+                "input": "src/assets",
+                "output": ""
               }
             ],
             "styles": ["src/styles.scss"],
